# roob1090

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  aircraft.json  app.js  index.js  package.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: serve1090.yml
data/: aircraft.json  history_33.json  small-test.json
deprecated/: post.rs
deprecated/models/: aircraft.rs  mod.rs
lib/: logger.js
routes/: index.js
serve/: TODO.md  package.json
serve/src/airspaces/airports/: dca.js
serve/src/stores/: aircraft-store.js
services/: flight-data.js  flight-store.js
src/: app.js  cli.yml  etc.rs  main.rs  post.rs  utils.js
src/lib/: errors.js  logger.js  utils.js
src/models/: aircraft.rs  aircraft_data.rs  mod.rs  pump_response.rs
src/routes/: index.js
src/routes/aircraft/: index.js
src/schemas/: aircraft.js
src/services/: airport-service.js  flight-store.js
src/stores/: aircraft-store.js
