[package]
name = "pump1090"
version = "0.1.0"
authors = ["Robert Steilberg <rsteilberg@gmail.com>"]
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_derive = "1.0.104"
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
notify = "4.0.12"
