[package]
name = "pump1090"
version = "0.2.1"
authors = ["Robert Steilberg <rsteilberg@gmail.com>"]
license = "MIT"
description = "Simple tool for sending dump1090 data to a websocket endpoint."
readme = "README.md"
repository = "https://github.com/robertsteilberg/pump1090"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tls"]
tls = ["native-tls"]

[dependencies]
dotenv = "0.15.0" # env vars parse
clap = {version = "^2.33.0", features = ["yaml"]} # cli arg parse
serde_json = "1.0.48" # dumpfile parse
url = "2.1.1" # endpoint URL
tungstenite = "0.10.1" # websockets

[dependencies.native-tls]
optional = true
version = "0.2.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
